{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 22,
  "lineage": "6d85b1b6-33cb-2821-d360-38becf933f2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dae4d0a1fe40f14",
            "arn": "arn:aws:ec2:us-east-1:211125395960:elastic-ip/eipalloc-05dae4d0a1fe40f14",
            "domain": "vpc",
            "id": "eipalloc-05dae4d0a1fe40f14",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-204-185-253.compute-1.amazonaws.com",
            "public_ip": "52.204.185.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terrafom_NATGatewayEIP"
            },
            "tags_all": {
              "Name": "terrafom_NATGatewayEIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:internet-gateway/igw-070be379b0ec64bc1",
            "id": "igw-070be379b0ec64bc1",
            "owner_id": "211125395960",
            "tags": {
              "Name": "terraform_igw"
            },
            "tags_all": {
              "Name": "terraform_igw"
            },
            "vpc_id": "vpc-0041eb93c720a8498"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dae4d0a1fe40f14",
            "association_id": "eipassoc-0de442376f85d9c22",
            "connectivity_type": "public",
            "id": "nat-01edae4473a7228d7",
            "network_interface_id": "eni-0da6ea863aef1c7d7",
            "private_ip": "10.0.1.154",
            "public_ip": "52.204.185.253",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07851da5704d26815",
            "tags": {
              "Name": "terrafom_NATGateway"
            },
            "tags_all": {
              "Name": "terrafom_NATGateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:route-table/rtb-015584689cf6bd160",
            "id": "rtb-015584689cf6bd160",
            "owner_id": "211125395960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01edae4473a7228d7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terrafom_PrivateRouteTable"
            },
            "tags_all": {
              "Name": "terrafom_PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0041eb93c720a8498"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_nat_gateway",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:route-table/rtb-0d5e9aee395c9069b",
            "id": "rtb-0d5e9aee395c9069b",
            "owner_id": "211125395960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070be379b0ec64bc1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terrafom_PublicRouteTable"
            },
            "tags_all": {
              "Name": "terrafom_PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0041eb93c720a8498"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e5255c17f407c3f",
            "route_table_id": "rtb-015584689cf6bd160",
            "subnet_id": "subnet-0ea9db58193d39856"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06888ffd6c88537c5",
            "route_table_id": "rtb-015584689cf6bd160",
            "subnet_id": "subnet-097de650276f3a020"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03010e50bde4af44b",
            "route_table_id": "rtb-0d5e9aee395c9069b",
            "subnet_id": "subnet-07851da5704d26815"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086d0e1c061ab434a",
            "route_table_id": "rtb-0d5e9aee395c9069b",
            "subnet_id": "subnet-0c26622f12cfe29b2"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a36ecadf78880ec0",
            "route_table_id": "rtb-0d5e9aee395c9069b",
            "subnet_id": "subnet-01a6178b6b0fdc08f"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_3",
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-new-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:security-group/sg-03d3ab4979d4683cf",
            "description": "Allow inbound traffic on tcp/443",
            "egress": [],
            "id": "sg-03d3ab4979d4683cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 from the Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web_server_inbound",
            "name_prefix": "",
            "owner_id": "211125395960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_server_inbound",
              "Purpose": "Intro to Resource Blocks Lab"
            },
            "tags_all": {
              "Name": "web_server_inbound",
              "Purpose": "Intro to Resource Blocks Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0041eb93c720a8498"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-0ea9db58193d39856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea9db58193d39856",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrafom_PrivateSubnet1"
            },
            "tags_all": {
              "Name": "terrafom_PrivateSubnet1"
            },
            "vpc_id": "vpc-0041eb93c720a8498"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-097de650276f3a020",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097de650276f3a020",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrafom_PrivateSubnet2"
            },
            "tags_all": {
              "Name": "terrafom_PrivateSubnet2"
            },
            "vpc_id": "vpc-0041eb93c720a8498"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-0d124211326b42c8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d124211326b42c8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrafom_PrivateSubnet3"
            },
            "tags_all": {
              "Name": "terrafom_PrivateSubnet3"
            },
            "vpc_id": "vpc-0041eb93c720a8498"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-07851da5704d26815",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07851da5704d26815",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrafom_PublicSubnet1"
            },
            "tags_all": {
              "Name": "terrafom_PublicSubnet1"
            },
            "vpc_id": "vpc-0041eb93c720a8498"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-0c26622f12cfe29b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c26622f12cfe29b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrafom_PublicSubnet2"
            },
            "tags_all": {
              "Name": "terrafom_PublicSubnet2"
            },
            "vpc_id": "vpc-0041eb93c720a8498"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-01a6178b6b0fdc08f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a6178b6b0fdc08f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terrafom_PublicSubnet3"
            },
            "tags_all": {
              "Name": "terrafom_PublicSubnet3"
            },
            "vpc_id": "vpc-0041eb93c720a8498"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:vpc/vpc-0041eb93c720a8498",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c03051d6aa81db0c",
            "default_route_table_id": "rtb-01270a9e30c802bfd",
            "default_security_group_id": "sg-0bea92aa0d0de2880",
            "dhcp_options_id": "dopt-033ceba9ec21dcf28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0041eb93c720a8498",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01270a9e30c802bfd",
            "owner_id": "211125395960",
            "tags": {
              "Name": "terraform_vpc-us-east-1"
            },
            "tags_all": {
              "Name": "terraform_vpc-us-east-1"
            }
          },
          "dependencies": [
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}